src/scss/main.scss
// Colors
$border-color: #B5B5B5;
$text-color: #000000;
$background-color: #FAFAFA;
$highlight-color: #219653;
$error-color: #EB5757;
$black-40: lighten(#000000, 40%);
$black-45: lighten(#000000, 45%);
$black-75: lighten(#000000, 75%);
// Utils
$initial-container-height: 140px;
$radius-default: 4px;
// Animations
$curve-swing: cubic-bezier(0.645, 0.045, 0.355, 1);
$curve-springy: cubic-bezier(0.43, 0.48, 0.62, 1.07);
$curve-easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
$loader-scale-duration: 300ms;

/* =========================================================================
   Genreral
   ========================================================================= */

[data-braintree-id='wrapper'] {
  // dropin.js has display = 'none' to prevent flicker before CSS has loaded
  display: block !important;
}

.braintree-dropin * {
  box-sizing: border-box;
}

.braintree-dropin {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-width: 200px;
  padding: 0;

  .braintree-hidden {
    height: 0;
    margin: 0;
    opacity: 0;
    overflow: hidden;
    visibility: hidden;
  }
}

/* =========================================================================
   Loaders
   ========================================================================= */
.braintree-loader__container {
  height: $initial-container-height;
  opacity: 1;
  position: absolute;
  width: 100%;
  z-index: 2;
}

.braintree-loaded {
  .braintree-loader__container {
    z-index: -2;
  }

  .braintree-loader__indicator {
    transform: translateY(-30%) scale(0);
  }
}

.braintree-loader__indicator {
  border: solid 2px $black-75;
  border-radius: 50%;
  height: 72px;
  margin: 0 auto;
  margin-top: -36px;
  position: relative;
  top: 50%;
  transition: transform $loader-scale-duration $curve-springy;
  width: 72px;

  &:before {
    animation: rotate 512ms infinite $curve-swing;
    border: solid 2px transparent;
    border-radius: 50%;
    border-top-color: $black-40;
    box-sizing: content-box;
    content: '';
    display: block;
    height: 100%;
    margin-left: -2px;
    margin-top: -2px;
    width: 100%;
  }
}

.braintree-loader__lock {
  fill: $black-40;
  left: 50%;
  margin-left: -7px;
  margin-top: -9px;
  position: absolute;
  top: 50%;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.braintree-sheet--loading {
  .braintree-sheet__content {
    opacity: 0.3;
  }

  .braintree-sheet__header::after {
    animation: loader-scale 1s infinite, loader-origin 1s steps(1) infinite;
    background: green;
    bottom: -2px;
    content: '';
    height: 2px;
    left: -1px;
    position: absolute;
    width: 100%;
  }
}

@keyframes loader-scale {
  0% {
    transform: scaleX(0);
  }

  50% {
    transform: scaleX(1);
  }

  100% {
    transform: scaleX(0);
  }
}

@keyframes loader-origin {
  0% {
    transform-origin: 0 0;
  }

  50% {
    transform-origin: 100% 0;
  }

  100% {
    transform-origin: 0 0;
  }
}

/* =========================================================================
   Headings
   ========================================================================= */
.braintree-heading {
  color: $text-color;
  font-size: 16px;
  margin-bottom: 10px;
  margin-left: 5px;
}

.braintree-icon--bordered {
  background: #FFFFFF;
  border: 1px solid #BBBBBB;
  border-radius: 3px;
  box-sizing: content-box;
}

/* =========================================================================
   Upper Container
   ========================================================================= */
.braintree-upper-container {
  border-radius: $radius-default;
  min-height: $initial-container-height;
  opacity: 1;
  position: relative;
  transition: min-height 600ms;
  width: 100%;
  z-index: 2;

  &:before {
    background-color: $background-color;
    border: 1px solid $border-color;
    border-radius: $radius-default;
    bottom: 5px;
    content: '';
    display: block;
    left: 3px;
    position: absolute;
    top: 0;
    width: 98.28%;
    z-index: -3;
  }
}

.braintree-loaded .braintree-upper-container {
  min-height: auto; 

  &:before {
    border: 0px;
  }
}

/* =========================================================================
   Payment Options
   ========================================================================= */
.braintree-options {
  margin: 0 auto;
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

.braintree-options-initial {
  max-height: 0;
  opacity: 0;
}

.braintree-options-list {
  margin: 0 auto;
  padding-bottom: 5px;
  width: 99%;
}

.braintree-option {
  align-items: center;
  background-color: $background-color;
  border-color: $border-color;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  cursor: pointer;
  display: flex;
  padding: 12px 10px;

  &.braintree-disabled {
    background: #EAEAEA;
    cursor: not-allowed;

    .braintree-option__label {
      color: #787878;
    }

    .braintree-option__disabled-message {
      float: right;
      font-size: 14px;
    }
  }

  &:first-child {
    border-radius: $radius-default $radius-default 0 0;
    border-top-width: 1px;
  }

  &:last-child {
    border-radius: 0 0 $radius-default $radius-default;
  }

  .braintree-option__logo {
    display: flex;
    text-align: center;

    align-items: center;
  }

  .braintree-option__label {
    color: $text-color;
    font-size: 16px;
    margin-left: 20px;
    width: 100%;
  }
}

/* =========================================================================
   Sheets
   ========================================================================= */
.braintree-sheet {
  background-color: white;
  border: 1px solid $border-color;
  border-radius: $radius-default;
  display: none;
  margin: 0 auto;
  max-height: 500px;
  transition: transform 300ms, opacity 300ms, max-height 300ms ease;
  width: 99%;
}
/* ... */

